fix chụp hình lỗi

--- a/CardDispenserLibrary/CardDispenserLibrary/CardDispenserLibrary.csproj
+++ b/CardDispenserLibrary/CardDispenserLibrary/CardDispenserLibrary.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Reference Include="iPGS.Tools">
-      <HintPath>..\..\packages\iPGS.Tools.dll</HintPath>
+      <HintPath>..\..\Lib_packages\iPGS.Tools.dll</HintPath>
     </Reference>
   </ItemGroup>
 
