--- a/PetrolimexConfig/PetrolimexConfig.csproj
+++ b/PetrolimexConfig/PetrolimexConfig.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PetrolimexTools\PetrolimexTools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="frmSetting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -35,6 +39,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
